# sys-rpms

./: CHANGELOG.md  Main.hs  Makefile  README.md  TODO  stack-lts11.yaml  stack-lts12.yaml  stack-lts16.yaml  sys-rpms.cabal
app/: Main.hs
src/: Main.hs  SysRpms.hs
