cabal-version:       2.4
name:                sys-rpms
version:             0.0.0.0
synopsis:            record installed rpms in system or container
description:         record installed rpms in system or container
homepage:            https://github.com/juhp/sys-rpms
bug-reports:         https://github.com/juhp/sys-rpms/issues
license:             MIT
license-file:        LICENSE
author:              Jens Petersen
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2020 Jens Petersen
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.0.2
                     GHC == 8.2.2
                     GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/juhp/sys-rpms.git

common common-options
  build-depends:       base >= 4.9.1.0 && < 4.14
                     , rio
  
  mixins:              base hiding (Prelude)
                     , rio (Rio as Prelude)
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     SysRpms

executable sys-rpms
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       sys-rpms
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
