cabal-version:       2.0
name:                sys-rpms
version:             0.1
synopsis:            record installed rpms in system or container
description:         record installed rpms in system or container
homepage:            https://github.com/juhp/sys-rpms
bug-reports:         https://github.com/juhp/sys-rpms/issues
license:             MIT
license-file:        LICENSE
author:              Jens Petersen
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2020 Jens Petersen
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.0.2
                     GHC == 8.2.2
                     GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/juhp/sys-rpms.git

executable sys-rpms
  main-is:             Main.hs
  other-modules:       Paths_sys_rpms
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

  build-depends:       base >= 4.9 && < 5
                     , directory
                     , extra
                     , filepath
                     , simple-cmd
                     , simple-cmd-args >= 0.1.6
                     , time
                     , unix
                     , xdg-basedir

  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
